src/objects/AFSC__FS_Template__c.object
<CustomObject>
    <description>F-Secure Cloud Protection: Notification templates</description>
    <fields>
        <fullName>AFSC__Default_Message__c</fullName>
        <label>Default Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AFSC__Default_Subject__c</fullName>
        <label>Default Subject</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AFSC__Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AFSC__Subject__c</fullName>
        <label>Subject</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <label>FS Template</label>
    <nameField>
        <label>FS Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FS Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>